--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -60,6 +60,32 @@
   margin-top: 1rem;
 }
 
+.avatar-edit-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.5rem;
+  padding: 1rem 0;
+}
+
+.profile-avatar-edit {
+  width: 120px;
+  height: 120px;
+  margin-bottom: 1rem;
+
+  ion-icon {
+    font-size: 60px;
+    color: var(--ion-color-medium);
+  }
+}
+
+.avatar-buttons {
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .profile-actions {
   margin-top: 1rem;
 }
