--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>MeetMeFit</ion-title>
+    <ion-title>Sportbuddy</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
   <div class="login-container">
     <div class="logo-section">
-      <h1>MeetMeFit</h1>
+      <h1>Sportbuddy</h1>
       <p class="subtitle">Finde deinen Sportpartner</p>
     </div>
 
