--- a/android/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/android/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,8 +4,9 @@
     android:height="108dp"
     android:viewportHeight="108"
     android:viewportWidth="108">
+    <!-- Solid background matching the gradient -->
     <path
-        android:fillColor="#26A69A"
+        android:fillColor="#4CAF50"
         android:pathData="M0,0h108v108h-108z" />
     <path
         android:fillColor="#00000000"
