--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -196,6 +196,16 @@
           <ion-text color="danger" *ngIf="offerForm.get('location')?.invalid && offerForm.get('location')?.touched">
             <p class="error-text">Bitte geben Sie einen Ort ein.</p>
           </ion-text>
+          <ion-button
+            fill="outline"
+            size="small"
+            (click)="useMyLocation()"
+            [disabled]="isGettingLocation"
+            class="ion-margin-top"
+          >
+            <ion-spinner *ngIf="isGettingLocation" name="crescent" slot="start"></ion-spinner>
+            <span>Mein Standort Verwenden</span>
+          </ion-button>
 
           <ion-item>
             <ion-label position="stacked">Datum & Uhrzeit *</ion-label>
@@ -233,6 +243,49 @@
             <span *ngIf="!isLoading">{{ isEditMode ? 'Aktualisieren' : 'Erstellen' }}</span>
           </ion-button>
         </form>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+
+  <!-- Map Confirmation Modal -->
+  <ion-modal [isOpen]="mapModalOpen" (didDismiss)="closeMapModal()">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Standort bestätigen</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="closeMapModal()" aria-label="Schließen">
+              <ion-icon name="close" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <div *ngIf="selectedAddress" class="location-info">
+          <ion-text>
+            <h3>Gefundener Standort:</h3>
+            <p>{{ selectedAddress }}</p>
+          </ion-text>
+        </div>
+
+        <div class="ion-margin-top">
+          <ion-button
+            expand="block"
+            (click)="confirmLocation()"
+            [disabled]="!selectedAddress"
+          >
+            <ion-icon name="checkmark-circle" slot="start"></ion-icon>
+            Standort verwenden
+          </ion-button>
+          <ion-button
+            expand="block"
+            fill="outline"
+            (click)="closeMapModal()"
+            class="ion-margin-top"
+          >
+            Abbrechen
+          </ion-button>
+        </div>
       </ion-content>
     </ng-template>
   </ion-modal>
